--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ section {
 @media screen and (min-width: 550px) {
   nav {
     height: 60px;
-    background-color: lightblue;
+    background-color: lightgray;
     position: fixed;
     top: 0;
     left: 0;
