--- a/Timothy Putzke - Fullstack Web Developer_files/style.css
+++ b/Timothy Putzke - Fullstack Web Developer_files/style.css
@@ -1,12 +1,12 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Source Sans Pro', sans-serif;
   line-height: 150%;
   font-size: 16px;
 }
 
 body {
+  font-family: 'Jomolhari', serif;
   width: 80%;
   margin: auto;
   background-color: #f6f6f8;
@@ -41,6 +41,7 @@ img {
 }
 
 nav {
+  background-color:pink;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -155,15 +156,6 @@ h4 {
 
 .nav-button {
   border: none;
-  background-color
-}
-
-#nav-name {
-  display: none;
-  margin-right: auto;
-  font-family: 'Playfair Display', sans-serif;
-  color: #f6f6f8;
-  font-size: 25spx;
 }
 
 .live-button {
@@ -192,7 +184,7 @@ h4 {
     right: 0;
     flex-direction: row;
     justify-content: flex-end; 
-    background-color: #2f435e;
+    background-color: white;
     margin: 0px;
     padding: 0 5%;
     order: 0;
